--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
         GTM Container
     </div>
-    <button onClick="c1()">Button 1</button>
+    <button onClick="c1('b1')">Button 1</button>
     <button onClick="c2()">Button 2</button>
     <button onClick="c3()">Button 3</button>
     <button onClick="c4()">Button 4</button>
