--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             console.log(arg + 'passed to GTM');
             window.dataLayerGH.push({'event':arg,'name':name})
         }
-        var c2 = c1.bind('c2 button','b2')
-        var c3 = c1.bind('c3 button','b3')
-        var c4 = c1.bind('c4 button','b4')
-        var c5 = c1.bind('c5 button','b5')
+        var c2 = c1.bind(null,'c2 button','b2')
+        var c3 = c1.bind(null,'c3 button','b3')
+        var c4 = c1.bind(null,'c4 button','b4')
+        var c5 = c1.bind(null,'c5 button','b5')
     </script>
 </html>
